--- a/index.html
+++ b/index.html
@@ -286,12 +286,40 @@
             </div>
 
             <div class="block_right_list">
-                <div class="wraper_menu_icon">
-                    2
+                <div class="wraper_menu_icon col_right">
+                    <div class="block_navigation_left">
+                        <h4>Employees Stats</h4>
+                        <p>New employees on 19th September, 2019</p>
+                    </div>
                 </div>
+
+                <table class="container_content">
+                    <tr class="col_green_info">
+                        <td>ID</td>
+                        <td>Name</td>
+                        <td>Salary</td>
+                        <td>Country</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Dacota Rice</td>
+                        <td>Salary</td>
+                        <td>Country</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Dacota Rice</td>
+                        <td>Salary</td>
+                        <td>Country</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Dacota Rice</td>
+                        <td>Salary</td>
+                        <td>Country</td>
+                    </tr>
+                </table>
             </div>
-
-
 
         </div>
 
