--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="user.html">
                             <span class="icon"><i class="fa-solid fa-user"></i></span>
                             <span class="item">User Profile</span>
                         </a>
@@ -56,6 +56,7 @@
             </div>
         </div>
         
+        <div class="wrap_all_container">
         <div class="container_right_content">
             <dach class="wrap_icon_menu">
                 <img src="img/menu.png" alt="">
@@ -325,7 +326,7 @@
             </div>
 
         </div>
-
+    </div>
         <footer>
             <div class="footer_left_content">
                 <a href="#">ABOUT</a>
