--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
                 </div>
 
-                <table class="container_content">
+               <table class="container_content">
                     <tr>
                         <td class="td_icon">
                             <input type="checkbox" id="scales" name="scales" checked>
@@ -257,45 +257,15 @@
                         <td><img class="w_img_remove" src="img/remove.png" alt=""></td>
                     </tr>
                 </table>
-
-                <!-- <div class="container_content">
-                    <div class="content">
-                        <input type="checkbox" id="scales" name="scales" checked>
-                        <p>Sign contract for "What are conference organizers afraid of ?"</p>
-                        <img src="img/edit.png" alt="">
-                        <img src="img/remove.png" alt="">
-                    </div>
-
-                    <div class="content">
-                        <input type="checkbox" id="scales" name="scales" checked>
-                        <p>Lines From Great America Literature? Or E-mails From My Boss?</p>
-                        <img src="img/edit.png" alt="">
-                        <img src="img/remove.png" alt="">
-                    </div>
-
-                    <div class="content">
-                        <input type="checkbox" id="scales" name="scales" checked>
-                        <p>Sign contract for "What are conference organizers afraid of ?"</p>
-                        <img src="img/edit.png" alt="">
-                        <img src="img/remove.png" alt="">
-                    </div>
-
-                    <div class="content">
-                        <input type="checkbox" id="scales" name="scales" checked>
-                        <p>Sign contract for "What are conference organizers afraid of ?"</p>
-                        <img src="img/edit.png" alt="">
-                        <img src="img/remove.png" alt="">
-                    </div>
-                </div> -->
             </div>
 
-            <div class="block_right_list">
-                <div class="wraper_menu_icon col_right">
-                    <div class="block_navigation_left">
-                        <h4>Employees Stats</h4>
-                        <p>New employees on 19th September, 2019</p>
+            <div class="block_list_rigth">
+                    <div class="wraper_menu_icon col_blue_left">
+                        <div class="wrap_title_right_info">
+                            <h4>Employees Stats</h4>
+                            <p>New employees on 19th September, 2019</p>
+                        </div>
                     </div>
-                </div>
 
                 <table class="container_content">
                     <tr class="col_green_info">
@@ -323,21 +293,21 @@
                         <td>Niger</td>
                     </tr>
                 </table>
-            </div>
+           
 
         </div>
     </div>
-        <footer>
-            <div class="footer_left_content">
-                <a href="#">ABOUT</a>
-                <a href="#">BLOG</a>
-                <a href="#">LICENSES</a>
-            </div>
-            <div class="footer_right_content">
-                <p>2019 - made with love</p>
-            </div>
-        
-        </footer>
+
+    <footer>
+        <div class="footer_left_content">
+            <a href="#">ABOUT</a>
+            <a href="#">BLOG</a>
+            <a href="#">LICENSES</a>
+        </div>
+        <div class="footer_right_content">
+            <p>2019 - made with love</p>
+        </div>
+    </footer>
 
     </div>
 </body>
