--- a/V1/index.html
+++ b/V1/index.html
@@ -5,64 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EX</title>
+    <title>Exam Dashboard</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="css/media.css">
+    <link rel="shortcut icon" type="image/png" href="img/images.png">
 </head>
 
 <body>
     <div class="container">
-        <!-- menu -->
-
         <div class="container_menu">
             <div class="title_menu">
                 <h1>Company</h1>
             </div>
 
-            <div class="menu">
+            <nav class="menu">
                 <ul>
                     <li>
                         <a href="#" class="active">
-                            <span class="icon"><i class="fa-light fa-table-columns"></i></span>
+                            <i class="fa-light fa-table-columns"></i>
                             <span class="item">Dashboard</span>
                         </a>
                     </li>
                     <li>
                         <a href="user.html">
-                            <span class="icon"><i class="fa-solid fa-user"></i></span>
+                            <i class="fa-solid fa-user"></i>
                             <span class="item">User Profile</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
+                            <i class="fa-solid fa-location-dot"></i>
                             <span class="item">Maps</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="icon"><i class="fa-sharp fa-solid fa-check-double"></i></span>
+                            <i class="fa-sharp fa-solid fa-check-double"></i>
                             <span class="item">Notifications</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <span class="icon"><i class="fa-regular fa-globe"></i></span>
+                            <i class="fa-regular fa-globe"></i>
                             <span class="item">Support</span>
                         </a>
                     </li>
                 </ul>
-            </div>
+            </nav>
+
         </div>
 
-        <div class="wrap_all_container">
-            <div class="container_right_content">
-                <dach class="wrap_icon_menu">
-                    <img src="img/menu.png" alt="">
-                    <h2>Dachboard</h2>
-                </dach>
+        <dach class="title_content">
+            <img src="img/menu.png" alt="">
+            <h2>Dachboard</h2>
+        </dach>
 
+        <div class="content">
+            <div class="container_right_content">
                 <div class="block">
                     <div class="icon_right_content col_icon">
                         <img src="img/data_white.svg" alt="">
@@ -121,7 +121,7 @@
 
             </div>
 
-            <div class="next_block_container">
+            <div class="block_centered">
 
                 <div class="block_icon_centre">
 
@@ -217,44 +217,44 @@
 
                     <table class="container_content">
                         <tr>
-                            <td class="td_icon">
+                            <td>
                                 <input type="checkbox" id="scales" name="scales" checked>
                             </td>
                             <td colspan="2">
                                 <p>Sign contract for "What are conference organizers afraid of ?"</p>
                             </td>
-                            <td class="w_img_edit"><img src="img/edit.png" alt=""></td>
-                            <td><img class="w_img_remove" src="img/remove.png" alt=""></td>
+                            <td class="img_edit"><img src="img/edit.png" alt=""></td>
+                            <td><img src="img/remove.png" alt=""></td>
                         </tr>
                         <tr>
-                            <td class="td_icon">
+                            <td>
                                 <input type="checkbox" id="scales" name="scales" checked>
                             </td>
                             <td colspan="2">
                                 <p>Lines From Great America Literature? Or E-mails From My Boss?</p>
                             </td>
-                            <td class="w_img_edit"><img src="img/edit.png" alt=""></td>
-                            <td><img class="w_img_remove" src="img/remove.png" alt=""></td>
+                            <td class="img_edit"><img src="img/edit.png" alt=""></td>
+                            <td><img src="img/remove.png" alt=""></td>
                         </tr>
                         <tr>
-                            <td class="td_icon">
+                            <td>
                                 <input type="checkbox" id="scales" name="scales" checked>
                             </td>
                             <td colspan="2">
                                 <p>Sign contract for "What are conference organizers afraid of ?"</p>
                             </td>
-                            <td class="w_img_edit"><img src="img/edit.png" alt=""></td>
-                            <td><img class="w_img_remove" src="img/remove.png" alt=""></td>
+                            <td class="img_edit"><img src="img/edit.png" alt=""></td>
+                            <td><img src="img/remove.png" alt=""></td>
                         </tr>
                         <tr>
-                            <td class="td_icon">
+                            <td>
                                 <input type="checkbox" id="scales" name="scales" checked>
                             </td>
                             <td colspan="2">
                                 <p>Sign contract for "What are conference organizers afraid of ?"</p>
                             </td>
-                            <td class="w_img_edit"><img src="img/edit.png" alt=""></td>
-                            <td><img class="w_img_remove" src="img/remove.png" alt=""></td>
+                            <td class="img_edit"><img src="img/edit.png" alt=""></td>
+                            <td><img src="img/remove.png" alt=""></td>
                         </tr>
                     </table>
                 </div>
@@ -262,12 +262,12 @@
                 <div class="block_right_list">
                     <div class="wraper_menu_icon_right">
                         <div class="block_navigation_right">
-                            <h4>Employees Stats</h4>
+                            <h1>Employees Stats</h1>
                             <p>New employees on 19th September, 2019</p>
                         </div>
                     </div>
 
-                    <table>
+                    <table class="fs_salary">
                         <tr>
                             <td>ID</td>
                             <td>Name</td>
