--- a/V1/user.html
+++ b/V1/user.html
@@ -15,7 +15,7 @@
             <h1>Company</h1>
         </div>
 
-        <div class="menu">
+        <nav class="menu">
             <ul>
                 <li>
                     <a href="index.html">
@@ -48,49 +48,76 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </div>
 
 
     <div class="container_user">
-        <div class="wrap_icon_menu_user">
+        <div class="title_user">
             <img src="img/menu.png" alt="">
             <h2>User Profile</h2>
         </div>
         <div class="wrap_container_user">
             <div class="left_block_info">
-                <div class="wrap_block_user_left_top">
-                    <div class="wrap_block_user_center">
+                <div class="block_user">
+                    <div class="block_content_user">
                         <h2>Edit Profile</h2>
                         <h3>Complete your profile</h3>
                     </div>
                 </div>
                 <div class="block_info_form">
                     <div class="application_form">
-                        <div class="info_form col_in">Company</div>
-                        <div class="info_form col_in">Username</div>
-                        <div class="info_form col_in">Email address</div>
+                        <div class="info_form col_in">
+                            <label>Company</label>
+                            <input type="text" class="input_user">
+                        </div>
+                        <div class="info_form col_in">
+                            <label>Username</label>
+                            <input type="text" class="input_user">
+                        </div>
+                        <div class="info_form col_in">
+                            <label>Email address</label>
+                            <input type="text" class="input_user">
+                        </div>
                     </div>
                 </div>
 
                 <div class="block_info_form">
                     <div class="application_form">
-                        <div class="info_form_name_left col_in">First name</div>
-                        <div class="info_form_name_right col_in">Last name</div>
+                        <div class="info_form_name_left col_in">
+                            <label>First name</label>
+                            <input type="text" class="input_user">
+                        </div>
+                        <div class="info_form_name_right col_in">
+                            <label>Last name</label>
+                            <input type="text" class="input_user">
+                        </div>
                     </div>
                 </div>
                 
                 <div class="block_info_form">
                     <div class="application_form">
-                        <div class="info_form_name_address col_in">Address</div>
+                        <div class="info_form_name_address col_in">
+                            <label>Address</label>
+                            <input type="text" class="input_user">
+                        </div>
                     </div>
                 </div>
 
                 <div class="block_info_form">
                     <div class="application_form">
-                        <div class="info_form col_in">City</div>
-                        <div class="info_form col_in">Country</div>
-                        <div class="info_form col_in">Postal code</div>
+                        <div class="info_form col_in">
+                            <label>City</label>
+                            <input type="text" class="input_user">
+                        </div>
+                        <div class="info_form col_in">
+                            <label>Country</label>
+                            <input type="text" class="input_user">
+                        </div>
+                        <div class="info_form col_in">
+                            <label>Postal code</label>
+                            <input type="text" class="input_user">
+                        </div>
                     </div>
                 </div>
 
@@ -114,7 +141,7 @@
 
             <div class="right_block_info_user">
                 <div class="wrap_icon_user">
-                    <img src="img/1.jpg" alt="">
+                    <img src="img/0.png" alt="">
                 </div>
                 <div class="info_user_profile">
                     <h2>CEO / CO-FOUNDER</h2>
